examples/network-policy/deployment-test-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    role: deployment-testing
